--- a/00-L2-CS2B-ASI-MARCH-2022/L2-Question5.Rmd
+++ b/00-L2-CS2B-ASI-MARCH-2022/L2-Question5.Rmd
@@ -65,8 +65,8 @@ study.
 
 ---
 
-#### Part  (A)
-For the Nelson‐Aalen model the estimated integrated hazard is calculated as:
+#### Part (A)
+For the Nelson-Aalen model the estimated integrated hazard is calculated as:
 
 ---
 
