--- a/00-L2-CS2B-ASI-MARCH-2022/L2-Question3.Rmd
+++ b/00-L2-CS2B-ASI-MARCH-2022/L2-Question3.Rmd
@@ -42,7 +42,7 @@ $$Zt=2 + 0.8Zt-1 + 0.1Zt-2 + et + 0.4et-1 + 0.1et-2$$ , where et are white noise
 random variables with mean 0 and σ2= 7
 
 i) Simulate 300 observations of the above time series using seed value equal to 100 and plot 
-it giving appropriate labels for each axis. Paste the plot into your answer sheet. (4)
+it giving appropriate labels for each axis. Paste the plot into your answer sheet. 
 ii) Using the data simulated in (i), compute the mean and standard deviation of 
 a) The entire series
 b) The first 150 observations of the series
@@ -54,9 +54,8 @@ iii) Plot the Autocorrelation function (ACF) and Partial Autocorrelation functio
 the simulated data in (i), giving appropriate labels for each axis. Paste the plots into your 
 answer sheet. 
 
-iv) Comment on the stationarity of data from (ii) and (iii) above. (3)
-
-v) Comment whether ARMA(2,2) can be inferred from the ACF and PACF plots. (3)
+iv) Comment on the stationarity of data from (ii) and (iii) above. 
+v) Comment whether ARMA(2,2) can be inferred from the ACF and PACF plots. 
 
 ---
 
@@ -140,7 +139,8 @@ while the ACF of non-stationary data decreases slowly
 ---
 
 #### Part (v)
- PACF becomes insignificant after two lags and ACF goes gradually to zero in
+
+* PACF becomes insignificant after two lags and ACF goes gradually to zero in
 dicating the strong presence of AR(2)process compared to an ARMA (2,2) models
  In ARMA(2,2) model, we should observe, ACF and PACF to gradually go down to 
 zero after a few lags
