--- a/00-Q1-CS1B-ASI-May-2023/Q1-Question-2.Rmd
+++ b/00-Q1-CS1B-ASI-May-2023/Q1-Question-2.Rmd
@@ -80,6 +80,9 @@ plot(Sales$Value,Sales$Age) (1)
 [3]
 b) b
 .
+
+---
+
 > cor.test(Sales$Value,Sales$Age)
 Pearson's product-moment correlation
 data: Sales$Value and Sales$Age
@@ -97,7 +100,9 @@ Confidence Interval is ( -0.367,0.134)
 Since 0 lies in the confidence interval, we cannot reject the hypothesis that correlation coefficient 
 = 0. 
 (1)
-[3]
+
+---
+
 iv)
 a) Since correlation between Value and Age is (close to) 0, age can be excluded. a (2)
 b) b
@@ -119,8 +124,9 @@ Age -26.25 13.41 -1.958 0.0552 .
 Signif. codes: 0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 (1)
 (1)
-IAI CS1B-0523
- Page 5 of 9
+
+---
+
 Residual standard error: 377 on 56 degrees of freedom
 Multiple R-squared: 0.6388, Adjusted R-squared: 0.6195 
 F-statistic: 33.01 on 3 and 56 DF, p-value: 2.019e-12
@@ -131,9 +137,9 @@ Age and City are not significant …
 Age is expected to insignificant per the earlier analysis.
 (0.5)
 (1)
-(0.5)
-(0.5)
-[Max 4]
+
+---
+
 c) c
 .
 model2<-lm(data = Sales,Value~Device)
@@ -153,11 +159,9 @@ H0: β (City) = β (Age) =0 against H1: atleast one of β (City) or β (Age) is 
 In model 2, there are 2 less parameters thus -2 degrees of freedom in Anova analysis
 p-value >0.05 showing we can’t reject H0: β (City) = β (Age) =0. 
 This indicates neither of the covariates have strong relationship with Order value. 
-(1)
-(1)
-(1)
-(0.5)
-[Max 5]
+
+---
+
 d) d
 .
 summary(model2)
@@ -179,13 +183,9 @@ F-statistic: 88.62 on 1 and 58 DF, p-value: 2.77e-13
  where Device= 1 for Mobile else 0
 Alternate:
 > # Value = 2056.47 - 1045.54 X Device Mobile 
-(1)
-(1.5)
-(0.5)
-(2)
-[Max 3]
-IAI CS1B-0523
- Page 6 of 9
+
+---
+
 v) .
 a) a
 .
@@ -205,12 +205,9 @@ b) b
 > (n-2)*varhat/qchisq(c(0.975,.025),58)
 [1] 105867.1 220588.2
 > # C.I. (105867,220588)
-(1)
-(0.5)
-(1.5)
-(2)
-(1)
-[Max 5]
+
+---
+
 vi) .
 a) a
 .
@@ -241,22 +238,26 @@ sum(e)
 e[6]<-1 - sum(e)
 sum(e)
 [1] 1
+
+---
 (1)
-(1)
-(0.5)
-(1)
-(0.5)
-(1) 
-(1)
+
+```
 chisq.test(x=a,p=e)
+
+```
+
 Chi-squared test for given probabilities
 data: a
 X-squared = 6.0026, df = 5, p-value = 0.306
 (2)
-Since p-value is greater than 0.05 , we can reject the hypothesis that number of order follows 
+
+
+* Since p-value is greater than 0.05 , we can reject the hypothesis that number of order follows 
 poisson distribution.
-(1)
-[Max 8]
+
+---
+
 vii) .
 a) a
 .
@@ -266,8 +267,7 @@ Call:
 glm(formula = Order ~ Device, family = poisson(lin = "log"), 
 (2)
 (1)
-IAI CS1B-0523
- Page 7 of 9
+
  data = Sales)
 Deviance Residuals: 
  Min 1Q Median 3Q Max 
