--- a/00-R1-CS1B-FIA-Sep-2023/R1-Question-1.Rmd
+++ b/00-R1-CS1B-FIA-Sep-2023/R1-Question-1.Rmd
@@ -54,33 +54,34 @@ on the histogram produced in part (ii). [7]
 (iv) Comment on the sampling distribution of the sample mean and the application
 of the CLT in this case based on your answers to parts (ii) and (iii). 
 
-
+---
 Q1
 (i)
 R code:
 set.seed(3202)
 n = 10; theta = 3
 m1 = matrix(0,nrow=10^4,ncol=n) # Initialise matrix, each sample in a row
-for (i in 1:10^4){ [½]
+for (i in 1:10^4){ 
 u = runif(n,0,1) 
 m= - log(1-u)/theta # Generate samples in rows 
-m1[i,] = m [½]
+m1[i,] = m 
 }
 (ii)
 R Code:
 xbar.a = apply(m1,1,mean) 
 hist(xbar.a,freq=F,main="Sampling distribution of Xbar") 
-
+---
 (iii)
-Using the CLT, the sampling distribution should be N(1/3, 1/90). [2]
+Using the CLT, the sampling distribution should be N(1/3, 1/90). 
 R code:
 x.grid = seq(0,1,length=1000) 
-lines(x.grid,dnorm(x.grid,1/3,sqrt(1/90))) [2]
+lines(x.grid,dnorm(x.grid,1/3,sqrt(1/90))) 
 
-
+---
 
 The curve shows the exact pdf of the sampling distribution. 
 (iv)
 The sampling distribution is relatively asymmetrical compared to the normal. 
 The CLT does not work very well here 
 as the sample size is small (n = 10). 
+---
