--- a/00-R1-CS1B-FIA-Sep-2023/R1-Question-5.Rmd
+++ b/00-R1-CS1B-FIA-Sep-2023/R1-Question-5.Rmd
@@ -53,18 +53,18 @@ surgical operation (two levels; 0: no; 1: yes).
 ---
 
 (i) Plot the admission rates against Age, while also distinguishing between
-different History levels on your graph. [5]
+different History levels on your graph. 
 [Hint: you can use the points(…) command in R. Also, make sure that all
 16 rates are shown in your graph, by adjusting the axes limits if necessary,
 e.g. use xlim, ylim in R.]
 (ii) Plot the admission rates against Age, while also distinguishing between
-different Operation levels on your graph. [5]
+different Operation levels on your graph. 
 [Hint: See hint in part (i).]
 
 ---
 
 (iii) Comment on the impact of the variables History, Operation and Age on the
-admission rates, based on your graphs from parts (i) and (ii). [2]
+admission rates, based on your graphs from parts (i) and (ii).
 (iv) Fit a normal Generalised Linear Model (GLM) to the data to investigate the
 dependence of admission rates on the three following variables: History,
 Operation and Age (when these variables are only included as main effects in
@@ -82,7 +82,7 @@ use the logarithmic link function in the model.
 the output of the model fitted in part (vi). [4]
 (viii) Determine which of the two models fitted in parts (iv) and (vi), should be
 preferred for investigating the dependence of admission rates on the available
-variables. [2]
+variables. 
 
 ---
 
@@ -91,38 +91,40 @@ variables. [2]
 *  no recent surgical operation.
 *  comorbidity B.
 *  median age 62.
-The prediction should be based on the preferred model from part (viii). [2]
+The prediction should be based on the preferred model from part (viii). 
 (x) Comment on a disadvantage of the GLMs used in parts (iv) and (vi), in terms
-of predicting admission rates. [2]
-[Total 31]
-END OF PAPER
+of predicting admission rates.
 
-[Total 24]
+---
+
 Q5
 (i)
 R code:
 Parts (i)-(iv) were answered reasonably well, with common errors including incorrect parameterisations for the binomial distributions involved.
 Part (v) was not well answered with a number of candidates not attempting it.
 
-
-plot(Age[History==0],Rate[History==0],pch=19,xlim=c(41,75),ylim=c(0.03,0.10),xlab="Age",ylab="Rate", main="Admission rates against age") [2]
+```{r}
+plot(Age[History==0],Rate[History==0],pch=19,xlim=c(41,75),ylim=c(0.03,0.10),xlab="Age",ylab="Rate", main="Admission rates against age") 
 points(Age[History==1],Rate[History==1],pch=19, col =
 "red") 
-Black bullets: History = 0; red bullets: History = 1. [2]
+```
+Black bullets: History = 0; red bullets: History = 1. 
 (ii)
 R code:
+
+```{r}
 plot(Age[Operation==0],Rate[Operation==0],pch=19,xlim=c(41,
-75),ylim=c(0.03, 0.10),xlab="Age",ylab="Rate") [2]
+75),ylim=c(0.03, 0.10),xlab="Age",ylab="Rate") 
 points(Age[Operation==1],Rate[Operation==1],pch=19, col = "red") 
+```
 
-
-Black bullets: Operation = 0; red bullets: operation = 1. [2]
+Black bullets: Operation = 0; red bullets: operation = 1. 
 (iii)
 Age seems to have a clear increasing effect on rates. 
 The effects of History and Operation are not clear. 
 (iv)
 R code:
-m1 = glm(Rate ~ History + Operation + Age, family = gaussian(link="log")) [2]
+m1 = glm(Rate ~ History + Operation + Age, family = gaussian(link="log")) 
 summary(m1)
 #Call:
 #glm(formula = Rate ~ History + Operation + Age, family = gaussian(link = "log"))
@@ -145,14 +147,20 @@ summary(m1)
 # Null deviance: 0.00738638 on 15 degrees of freedom
 #Residual deviance: 0.00056253 on 12 degrees of freedom
 #AIC: -108.68 
+
+---
+
 (v)
-History does not have a significant impact since p-value is large (0.864). [½]
-Operation does not have a significant impact since p-value is large (0.871). [½]
+History does not have a significant impact since p-value is large (0.864). 
+Operation does not have a significant impact since p-value is large (0.871). 
 Age has a highly significant 
 positive effect since p-value is very small, 4.35e-07. 
+
+---
+
 (vi)
 R code:
-m2 = glm(Rate ~ History + Operation + Age + Comorbidity, family = gaussian(link="log")) [2]
+m2 = glm(Rate ~ History + Operation + Age + Comorbidity, family = gaussian(link="log")) 
 summary(m2)
 
 
@@ -181,13 +189,18 @@ summary(m2)
 # Null deviance: 0.0073864 on 15 degrees of freedom
 #Residual deviance: 0.0002635 on 9 degrees of freedom
 #AIC: -114.82 
+
+---
 (vii)
 As before, History and Operation do not have a significant impact, while age still
 has a highly significant positive effect. [1½]
 Comorbidity has significant impact, 
 with levels 2-3 (comorbidities B-C) having a significant reducing effect as
 compared to level 1 (baseline, comorbidity A) 
-and level 4 (comorbidity D) having a marginally (non-)significant negative impact. [½]
+and level 4 (comorbidity D) having a marginally (non-)significant negative impact. 
+
+---
+
 (viii)
 The model with the 4 covariates in part (vi) should be preferred, 
 as it has smaller AIC. 
@@ -198,31 +211,7 @@ Predicted link function value is:
 and predicted value is:
 exp(-2.701422) = 0.06711001 
 
-
+---
 (x)
 The used GLM has a logarithmic link,
-which implies that predicted rates can be above 1. [2]
-[Total 31]
-[Paper Total 100]
-END OF EXAMINERS’ REPORT
-In parts (i)-(iii) answers were mixed, with many candidates failing to distinguish between the different history and operation levels.
-Parts (iv)-(viii) were generally well answered. Common errors included failing to use a logarithmic function as specified in the question and comments often being limited or vague.
-Answers in part (ix) were mixed, with a number of candidates failing to use the correct link function.
-Part (x) was not well answered, with many candidates not attempting it.
-Beijing
-14F China World Office 1 · 1 Jianwai Avenue · Beijing · China 100004 Tel: +86 (10) 6535 0248
-Edinburgh
-Level 2 · Exchange Crescent · 7 Conference Square · Edinburgh · EH3 8RA Tel: +44 (0) 131 240 1300
-Hong Kong
-1803 Tower One · Lippo Centre · 89 Queensway · Hong Kong Tel: +852 2147 9418
-London (registered office)
-7th Floor · Holborn Gate · 326-330 High Holborn · London · WC1V 7PP Tel: +44 (0) 20 7632 2100
-Oxford
-1st Floor · Belsyre Court · 57 Woodstock Road · Oxford · OX2 6HJ
-Tel: +44 (0) 1865 268 200
-Singapore
-5 Shenton Way · UIC Building · #10-01 · Singapore 068808 Tel: +65 8778 1784
-
-
-www.actuaries.org.uk
-© 2021 Institute and Faculty of Actuaries
+which implies that predicted rates can be above 1. 
