--- a/00-R2-CS2B-FIA-Sep-2023/R2-Question-01.Rmd
+++ b/00-R2-CS2B-FIA-Sep-2023/R2-Question-01.Rmd
@@ -45,24 +45,31 @@ males for each age last birthday from 20 to 100 inclusive, in each year from 196
 (i) Construct R code to load the data files into R and to assign them to two 81 ×
 60 matrices called ‘Deaths’ and ‘Exposures’ respectively. 
 (ii) Generate an 81 × 60 matrix called ‘m_xt’, consisting of the crude central
-mortality rates calculated by dividing the deaths by the exposures. [2]
+mortality rates calculated by dividing the deaths by the exposures. 
+
+---
 Gompertz Law is fitted to the crude central mortality rates, mxt, for each calendar year
 t separately using linear regression of the log central mortality rates on age x such
 that:
 𝑚􀯫􀯧 􀵌 exp􀵫α􀯧 􀵅 β􀯧􁈺𝑥 􀵆 𝑥̅􁈻􀵯
 (iii) Generate a 60 × 2 matrix called ‘Gompertz’, consisting of the values of αt and
 βt for each calendar year t. Display the first six rows of Gompertz in your
-answer script. [8]
+answer script.
+
+---
+
 (iv) Plot two line graphs showing the values of αt and βt you fitted in part (iii) for
 each calendar year t, displaying the graphs side-by-side in your answer script.
-[7]
+
+---
+
+
 (v) Comment on the key features of your graphs in part (iv). [3]
 (vi) Plot a graph showing the value of the chi-square goodness of fit statistic for
 the Gompertz graduation for each calendar year t. [8]
 (vii) Suggest with reasons, what further investigations should be carried out in view
 of your graph in part (vi). [3]
-[Total 35]
-CS2B S2023–3
+
 
 
 ---
@@ -70,34 +77,51 @@ CS2B S2023–3
 Solutions for Subject CS2B - September 2023
 Q1
 (i)
+
+```{r}
 Deaths <- 
 as.matrix(
 read.csv("CS2B_S23_Q1_Deaths.csv")) 
 Deaths <- Deaths[, -1] 
 Exposures <- as.matrix(read.csv("CS2B_S23_Q1_Exposures.csv"))
-Exposures <- Exposures[, -1] [1½]
+Exposures <- Exposures[, -1] 
+```
+
+---
+
 (ii)
+
+```{r}
 m_xt <- 
-Deaths / Exposures [1½]
+Deaths / Exposures 
+```
+
+
+---
+
+
 (iii)
+
+```{r}
 Gompertz <- 
 matrix(nrow = 60, ncol = 2) 
+
 x <- -40:40 
-for(j in 1:60) 
-{Gompertz[j,] <- 
-lm( 
-log(m_xt[,j]) 
-~ x) 
-$coefficients} 
+
+for(j in 1:60) {
+  Gompertz[j,] <- lm( log(m_xt[,j]) ~ x)$coefficients
+}
+
+```
+
+```{r}
 head(Gompertz) 
-[,1] [,2]
-[1,] -3.893014 0.09078393
-[2,] -3.904192 0.09133845
-[3,] -3.886557 0.09119119
-[4,] -3.944754 0.08913961
-[5,] -3.935357 0.08987763
-[6,] -3.924543 0.09092293 
+```
+
+---
 (iv)
+
+```{r}
 t = 1961:2020 
 par(mfrow = c(1,2))
 plot( 
@@ -107,9 +131,16 @@ type = "l",
 main = "alpha(t) as a function of t", 
 xlab = "t", 
 ylab = "alpha(t)") 
+
+
+plot(t, Gompertz[,2], type = "l", 
+     main = "beta(t) as a function of t", xlab = "t", 
+     ylab = "beta(t)") 
+
+```
+
+
 ---
-CS2B S2023 © Institute and Faculty of Actuaries
-plot(t, Gompertz[,2], type = "l", main = "beta(t) as a function of t", xlab = "t", ylab = "beta(t)") [1½]
 
 (v)
 alpha(t) exhibits a downward trend as t increases 
